[package]
name = "blergh1"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
apache-nimble = { version = "0.1.0", features = ["port-layer-embassy", "nrf52840", "controller"] }
embassy-time = { version = "0.4.0" }
embassy-sync = "0.6.0"
embassy-futures = "0.1.0"
embassy-executor = { version = "0.7.0", features = ["executor-thread", "arch-cortex-m"] }
embassy-nrf = { version = "0.3.0", features = ["nfc-pins-as-gpio", "time-driver-rtc1", "nrf52840"] }
trouble-host = { version = "0.1.0", features = ["derive", "scan"] }
static_cell = "1.0.0"

[patch.crates-io]
apache-nimble = { git = "https://github.com/benbrittain/apache-nimble-sys.git", branch = "master" }

[profile.dev]
debug = 2
# lto = true
# opt-level = 'z'

[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = 'z'

